name:                optical
version:             0.1.0.0
synopsis:            Lens flavoured prelude
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    -- Lensy
    Optical
    Optical.Bit
    Optical.Witherable
    Optical.Severable
    Optical.Patterns
    Optical.Containers
    Optical.System
    Optical.Text
  -- other-modules:       
  other-extensions:
    Trustworthy
    Rank2Types
    CPP
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    StandaloneDeriving
    UndecidableInstances
    FlexibleContexts
  build-depends:
    base                 >= 4.7  && <4.9,
    bifunctors,
    lens,
    vector,
    semigroups,
    mtl,
    containers,
    unordered-containers,
    primitive,
    profunctors,
    comonad,
    base-compat,
    distributive,
    linear,
    semigroupoids,
    text,
    bytestring,
    hashable,
    transformers,
    filepath,
    directory,
    process,
    base-orphans
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
